--- a/.github/workflows/cypress-visual.yml
+++ b/.github/workflows/cypress-visual.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+  workflow_dispatch:  # Allows manual run from Actions tab
 
 jobs:
   cypress-visual:
